--- a/main.html
+++ b/main.html
@@ -10,7 +10,12 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<p id="yellow">Web crowlers bring websites to us when we search something based on seo score
+</p>
+	<p id="red">Web crowlers bring websites to us when we search something based on seo score
+</p>
+	<p id="green">Web crowlers bring websites to us when we search something based on seo score
+</p>
 </body>
 
 </html>
